--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<img class="header__logo" src="img/logo.jpg">
 
 		<div>
-			<h1 class="header__title red">Вступление H1</h1>
+			<h1 class="header__title">Вступление H1</h1>
 
 			<div class="header__text-1">
 				<p>Это текст моего первого домашнего задания</p>
