--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</div>	
 
 			<div class="header__text-2">
-				<p>Не верится, но мне уже удается писать свой <span class="red">первый код на HTML</span></p>
+				<p>Не верится, но мне уже удается писать свой первый код на HTML</p>
 			</div>
 
 			<h2 class="header__title-h2">Что дальше? H2</h2>
