--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>HTML5</title>
+	<title>CSS</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
@@ -12,30 +13,27 @@
 	<header class="header">
 
 		<img class="header__logo" src="img/logo.jpg">
+		<h1 class="header__title text_red">Вступление H1</h1>
+		<p class="header__text-1">Это текст моего первого домашнего задания</p>
+		<p class="header__text-2">Не верится, но мне уже удается писать свой <span class="text_red">первый код на HTML</span></p>
 
-		<div>
-			<h1 class="header__title">Вступление H1</h1>
+	</header>	<!-- /.header -->	
 
-			<div class="header__text-1">
-				<p>Это текст моего первого домашнего задания</p>
-			</div>	
+	<section class="section">
 
-			<div class="header__text-2">
-				<p>Не верится, но мне уже удается писать свой первый код на HTML</p>
-			</div>
-
-			<h2 class="header__title-h2">Что дальше? H2</h2>
+			<h2 class="section__title-h2">Что дальше? H2</h2>
 			<p>Дальше, я буду получать все больше и больше опыта в разработке сайтов, чтобы достичь новых вершин! <a href="#">Прочитать больше в Google</a></p>
-		</div>
-		
 
-		<div>
-			<h2 class="header__title-h2 header__title-h2_big">Что я буду уметь? H2</h2>
+	</section>	<!-- /.section -->
 
-			<div class="header__item">
+	<section class="section">
+
+			<h2 class="section__title-h2 section__title-h2_big">Что я буду уметь? H2</h2>
+
+			<div class="section__item">
 				<p class="item__title">Я смогу создавать вот такие замечательные формы:</p>
 
-				<form class="header__form" action="#">
+				<form class="section__form" action="#">
 					<input type="text" name="name" placeholder="Имя" required="">
 					<input type="email" name="email" placeholder="Email" required="">
 					<input type="tel" name="phone" placeholder="Телефон" required="">
@@ -44,7 +42,7 @@
 			</div>
 
 			<p>А также, я научусь создавать списки</p>
-			<ul class="header__list">
+			<ul class="section__list">
 				<li>
 					С одним пунктом
 				</li>
@@ -57,14 +55,15 @@
 					И даже с тремя отдельными пунктами
 				</li>
 			</ul>
-		</div>
 
-		<div>
-			<h2 class="header__title-h2">Отличное начало! H2</h2>
-			<a href="#">Перейти на страницу первого занятия курса</a>
-		</div>
+	</section>	<!-- /.section -->
+
+	<footer class="footer">
+
+		<h2 class="section__title-h2">Отличное начало! H2</h2>
+		<a href="#">Перейти на страницу первого занятия курса</a>
 		
-	</header> <!-- /.header -->
-
+	</footer>	<!-- /.footer -->
+		
 </body>
 </html>
