--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	</section> <!-- /.section -->
 
 	<footer class="footer">
-		<p class="right">© Все мои мечты защищены моим трудолюбием</p>
+		<p class="rights">© Все мои мечты защищены моим трудолюбием</p>
 	</footer>
 
 </body>
