--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 	</section> <!-- /.section -->
 
 	<footer class="footer">
-		<p class="rights">© Все мои мечты защищены моим трудолюбием</p>
+		<div class="container">
+			<p class="rights">© Все мои мечты защищены моим трудолюбием</p>
+		</div> <!-- /.container -->
 	</footer>
 
 </body>
