--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Site</title>
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,7 +27,9 @@
 					<a class="btn" href="#">Двигаться к мечте!</a>
 				</div>
 
-				<img class="header__img" src="img/headerimg.png">
+				<div class="header__img">
+					<img src="img/headerimg.png">
+				</div>
 
 			</div> <!-- /.content-wrap -->
 
